# SentiBridge

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/agents/: sentibridge.agent.md
.github/workflows/: ci.yml  deploy.yml
api/: .coverage  .env  .env.example  Dockerfile  pyproject.toml
api/src/: __init__.py  config.py  main.py  models.py
api/src/auth/: __init__.py  dependencies.py  jwt.py
api/src/middleware/: usage.py
api/src/migrations/: 0001_create_billing_tables.sql
api/src/routers/: __init__.py  attestations.py  billing.py  health.py  keys.py  sentiment.py
api/src/services/: __init__.py  billing.py  blockchain.py
api/tests/: test_api_key_middleware.py  test_attestations.py  test_auth_dependencies_and_middleware.py  test_auth_jwt.py  test_billing_router.py  test_blockchain_service.py  test_blockchain_service_extended.py  test_keys_and_health.py  test_sentiment_router.py
contracts/: .env.example  .gitignore  DEPLOYMENTS.md  foundry.toml
contracts/broadcast/Deploy.s.sol/80002/: run-1765024620629.json
contracts/script/: Deploy.s.sol  DeployProduction.s.sol  IntegrationTest.s.sol  Upgrade.s.sol  deploy-local.sh  deploy-testnet.sh
contracts/src/: Notary.sol  SentiBridgeTimelock.sol  SentimentOracleV1.sol
contracts/src/interfaces/: ISentimentOracle.sol
contracts/src/libraries/: SentimentMath.sol
contracts/test/: Notary.t.sol  SentimentOracleFuzz.t.sol  SentimentOracleV1.t.sol
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  SECURITY.md  SECURITY_AUDIT_CHECKLIST.md  TESTNET_DEPLOYMENT.md  ZK_TLS_DESIGN.md
infrastructure/: README.md
infrastructure/docker/: .env  .env.example  docker-compose.yml  init-db.sql  prometheus.yml
infrastructure/tee_stub/: README.md  attestation_service.py
subgraph/: package-lock.json  package.json  schema.graphql  subgraph.yaml
subgraph/abis/: SentimentOracle.json
subgraph/src/: mapping.ts
workers/: .env.example  .gitignore  Dockerfile  README.md  debug_settings_run.py  integration_test.py  pyproject.toml  run.py
workers/examples/: showcase_manipulation.py  submit_attestation.py
workers/src/: __init__.py  config.py  worker.py
workers/src/collectors/: __init__.py  base.py  discord.py  telegram.py  twitter.py
workers/src/oracle/: __init__.py  submitter.py
workers/src/processors/: __init__.py  manipulation_detector.py  nlp_analyzer.py
workers/src/security/: __init__.py  secrets_manager.py
workers/src/utils/: __init__.py  logging.py  notary.py  validation.py
workers/tests/: conftest.py  test_config.py  test_manipulation_detector.py  test_manipulation_detector_extended.py  test_nlp_analyzer.py  test_notary_utils.py
